[package]
name = "wasm-artillery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
macroquad = "0.4.4"
quadtree_rs = "0.1.3"
simdnoise = "3.1.6"
rand ="0.5.0" 
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2