[package]
name = "wasm-artillery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
bevy_math = "0.11.3"
bitflags = "2.4.1"
glam = "0.24.2"
pixel_map = "0.3.0"
rand = "0.8.5"
simdnoise = "3.1.6"




[profile.dev]
opt-level = 0

[profile.release]
opt-level = 2
